--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "backbone": "^1.6.0",
-    "backbone-relational": "^0.10.0"
+    "backbone-relational": "^0.10.0",
+    "flatted": "^3.3.1"
   }
 }
